# CSS fixes for tables item edit form, (a) fixed title/alias fields not fitting, fixed custom labels not aligning left on some cases

--- a/administrator/components/com_flexicontent/assets/css/flexicontentbackend.css
+++ b/administrator/components/com_flexicontent/assets/css/flexicontentbackend.css
@@ -668,7 +668,7 @@ div label.lang_box {
 
 #flexicontent ul.tabbernav li {	padding: 3px !important;	margin: 0px !important; line-height: 14px !important; }
 	
-#flexicontent .fcfield-row .flexi_label { margin:0px 8px 0px 2px; border:1px dashed lightgray!important; text-align:right; }
+#flexicontent .fcfield-row .flexi_label { margin:0px 8px 0px 2px; border:1px dashed lightgray!important; text-align:right; float:left:!important}
 #flexicontent .fcfield-clear { width:100%!important; padding:0px!important; margin:8px 0px 8px 0px!important; float:left; clear:both!important; border-top:1px dashed gray!important; }
 #flexicontent .fcfield-sortables { margin:0px!important; padding:0px!important; }
 #flexicontent .fcfield-sortables li { margin:0px 0px 4px 0px !important; padding:0px !important;  }
@@ -693,22 +693,14 @@ div fieldset input, div fieldset textarea, div fieldset select, div fieldset img
 	/*margin: 2px 2px 2px 0px !important;*/
 }
 
-div.flexi_edit .flexi_label {
-	display: block;
-	float: left;
-  background-color: #F6F6F6;
-  border-bottom: 1px solid #E9E9E9;
-  border-right: 1px solid #E9E9E9;
-  font-weight: bold;
-  text-align: right;
-  width: 140px;
-  margin:0px;
-  padding:3px;
+#flexicontent #alias, #flexicontent #jform_alias,
+#flexicontent #title, #flexicontent #jform_title {
+	font-size:11px!important; font-family:tahoma!important; width: 186px;
 }
 
 div.flexi_edit .flexi_label {
 	display: block;
-	float: left;
+	float: left!important;
   background-color: #F6F6F6;
   border-bottom: 1px solid #E9E9E9;
   border-right: 1px solid #E9E9E9;
